test/negative/t34.mli.expected

*******************************
********** Parsed file ********
*******************************
type t = {
  x: int }[@@gospel
             function f (x: t): int =
    match x with
    | {y} -> y ]

*******************************
****** GOSPEL translation *****
*******************************
(*@ open Gospelstdlib *)

type t = {
x: int }
  

(*@ function f ... *)
File "t34.mli", line 15, characters 7-8:
Error: Symbol y not found
